--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@
                         <h1>Periodo de Prueba</h1>
                         <li class="google"><a href="https://accounts.google.com/o/oauth2/auth?client_id=845870357484-2kago7oc9e6h29ib8f8cplfscpflsvo4.apps.googleusercontent.com&redirect_uri=inicio.html&response_type=code&scope=https://www.googleapis.com/auth/drive&access_type=offline">Google</a></li>
                         <li class="fb"><a href="https://m.facebook.com/login/?locale=es_ES">Facebook</a></li>
-                        header("Location: inicio.html");
-                    exit();
+                       
                     </ul>
                 </div>
 
                 <div class="_or">o</div>
 
-                // Poner procesar iniciar sesion
+                
 
-                <form action="" method="post" class="the-form">
+                <form action="inicio.html" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -66,14 +65,12 @@
                         <h1>Periodo de Prueba</h1>
                         <li class="google"><a href="https://accounts.google.com/o/oauth2/auth?client_id=845870357484-2kago7oc9e6h29ib8f8cplfscpflsvo4.apps.googleusercontent.com&redirect_uri=inicio.html&response_type=code&scope=https://www.googleapis.com/auth/drive&access_type=offline">Google</a></li>
                         <li class="fb"><a href="https://m.facebook.com/login/?locale=es_ES">Facebook</a></li>
-                        header("Location: inicio.html");
-                    exit();
                     </ul>
                 </div>
 
                 <div class="_or">o</div>
 
-                <form action="" method="post" class="the-form">
+                <form action="inicio.html" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
