--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
                         <h1>Periodo de Prueba</h1>
                         <li class="google"><a href="https://accounts.google.com/o/oauth2/auth?client_id=845870357484-2kago7oc9e6h29ib8f8cplfscpflsvo4.apps.googleusercontent.com&redirect_uri=inicio.html&response_type=code&scope=https://www.googleapis.com/auth/drive&access_type=offline">Google</a></li>
                         <li class="fb"><a href="https://m.facebook.com/login/?locale=es_ES">Facebook</a></li>
-                       
                     </ul>
                 </div>
 
                 <div class="_or">o</div>
 
-                <form action="inicio.html" method="post" class="the-form">
+                <form action="inicio.html" method="post" class="the-form" onsubmit="redirectForm('inicio.html')">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -68,7 +67,7 @@
 
                 <div class="_or">o</div>
 
-                <form action="inicio.html" method="post" class="the-form">
+                <form action="inicio.html" method="post" class="the-form" onsubmit="redirectForm('inicio.html')">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -92,10 +91,18 @@
         </div>
     </div>
 
-      <script>
+    <script>
         function toggleForm() {
             const formContainer = document.querySelector('.form-container');
             formContainer.classList.toggle('register-mode');
         }
+
+        function redirectForm(destination) {
+            // Puedes realizar aquí alguna acción antes del envío del formulario si es necesario
+            document.querySelector('.the-form').action = destination;
+        }
+    </script>
+
 </body>
 </html>
+
