--- a/inicio.html
+++ b/inicio.html
@@ -163,6 +163,7 @@
           <li><a href="consejos.html">Consejos Sobre Ciberseguridad</a></li>
           <li><a href="Pagina%20de%20pago.html">Página de Pago</a></li>
           <li><a href="Chatbot.html">Chat bot</a></li>
+          <li><a href="index.html">Cerrar sesion</a></li>
         </ul>
       </nav>
     </div>
