--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 <h2 class="title">Inicia sesión con</h2>
                 <div class="social-login">
                     <ul>
-                        <h1>Periodo de Prueba</h1>
-                        <li class="google"><a href="#" onclick="redirectForm('inicio.html');">Google</a></li>
-                        <li class="fb"><a href="#" onclick="redirectForm('inicio.html');">Facebook</a></li>
+                        <li class="google"><a href="https://accounts.google.com/o/oauth2/auth?client_id=845870357484-2kago7oc9e6h29ib8f8cplfscpflsvo4.apps.googleusercontent.com&redirect_uri=inicio.html&response_type=code&scope=https://www.googleapis.com/auth/drive&access_type=offline">Google</a></li>
+                        <li class="fb"><a href="iniciar_sesion_facebook.php">Facebook</a></li>
+                       
                     </ul>
                 </div>
 
                 <div class="_or">o</div>
 
-                <form action="inicio.html" method="post" class="the-form">
+                <form action="procesar_iniciar_sesion.php" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -59,15 +59,14 @@
                 <h2 class="title">Regístrate con</h2>
                 <div class="social-login">
                     <ul>
-                        <h1>Periodo de Prueba</h1>
-                        <li class="google"><a href="#" onclick="redirectForm('inicio.html');">Google</a></li>
-                        <li class="fb"><a href="#" onclick="redirectForm('inicio.html');">Facebook</a></li>
+                        <li class="google"><a href="registro_google.php">Google</a></li>
+                        <li class="fb"><a href="registro_facebook.php">Facebook</a></li>
                     </ul>
                 </div>
 
                 <div class="_or">o</div>
 
-                <form action="inicio.html" method="post" class="the-form">
+                <form action="procesar_registro.php" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -95,10 +94,6 @@
         function toggleForm() {
             const formContainer = document.querySelector('.form-container');
             formContainer.classList.toggle('register-mode');
-        }
-
-        function redirectForm(destination) {
-            document.querySelector('.the-form').action = destination;
         }
     </script>
 
