--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <div class="_or">o</div>
 
-                <form action="procesar_iniciar_sesion.php" method="post" class="the-form">
+                <form action="#" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
@@ -66,7 +66,7 @@
 
                 <div class="_or">o</div>
 
-                <form action="procesar_registro.php" method="post" class="the-form">
+                <form action="" method="post" class="the-form">
 
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" required>
