--- a/Chatbot.html
+++ b/Chatbot.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" type="text/css" href="style1.css">
   <title>Bot Ciberseguridad</title>
+   <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
 </head>
 
 <body>
