--- a/Contacto.html
+++ b/Contacto.html
@@ -7,6 +7,7 @@
     <title>Contacto y Productos</title>
     <link rel="stylesheet" href="style5.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+     <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
 </head>
 
 <body>
