--- a/inicio.html
+++ b/inicio.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+   <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arreglos y Ciberseguridad</title>
