--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     </div>
                 </div>
 
+             <div class="form__div form__div-email">
+    <label for="email" class="form__label-email">Correo Electrónico</label>
+    <input type="email" id="email" class="form__input form__input-email" required>
+</div>
+
                 <div class="form__div">
                     <div class="form__icon">
                         <i class='bx bx-lock' ></i>
